# Apertus-T872

./: CMakeLists.txt  README.md
include/: BMP.hpp  BMP_Headers.hpp  Debayer.hpp
src/: BMP.cpp  Debayer.cpp  main.cpp
